<resources>
    <string name="app_name">Notes</string>
    <string name="_save">Add</string>
    <string name="_1">1.</string>
    <string name="_title">Title</string>
    <string name="_description">Description</string>
    <string name="title_">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Description</string>
    <string name="e_desc">Enter Description</string>
    <string name="save_">Save</string>
    <string name="delete">Delete</string>
    <string name="_ENote">Notes</string>
</resources>
